# Blob

./: build-blobUI.sh
applications/blobTest/: CMakeLists.txt  Jenkinsfile  build.sh  build_clean.sh
applications/blobTest/src/: blobTest.m.cpp
applications/blobUI/: CMakeLists.txt  Jenkinsfile  build.sh
applications/blobUI/src/: basic.pro  blobui.cpp  blobui.h  blobui.ui  field.cpp  field.h  fieldThreadWorker.cpp  fieldThreadWorker.h  main.m.cpp  rateListener.h  redraw.h  redrawThreadWorker.cpp  redrawThreadWorker.h  setBlobs.h  todo  updateThreadWorker.cpp  updateThreadWorker.h
libraries/libBlob/: CMakeLists.txt  build.sh
libraries/libBlob/include/: blob.h  blobImpl.h  createBlob.h  option.h
libraries/libBlob/src/: .blob.cpp.swp  blob.cpp  blobImpl.cpp  createBlob.cpp
libraries/libBlob/tests/: 02_00_movement.t.cpp  02_01_fight.t.cpp  03_00_blob.t.cpp  05_02_blob_canSmell.t.cpp  07_00_blob_kill.t.cpp  07_01_blob_move.t.cpp  07_02_blob_fight.t.cpp  08_00_blob_age.t.cpp  08_01_blob_hunger.t.cpp  09_00_blob_flee.t.cpp  09_01_blob_hunt.t.cpp  09_02_blob_wander.t.cpp  10_01_blob_distanceWeight.t.cpp  10_02_blob_attackWeight.t.cpp  10_03_blob_fleeWeight.t.cpp  11_00_blob_findOptions.t.cpp  11_02_blob_selectBestOption_same_square.t.cpp  11_03_blob_selectBestOption_in_range.t.cpp  11_05_blob_selectBestOption_aggression.t.cpp  11_06_blob_chooseNextAction.t.cpp  11_07_blob_chooseNextAction_wander.t.cpp  12_00_blob_tired.t.cpp
